Now you can delete item and change image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">Foodie</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="main_fragment_label">Foodie!</string>
     <string name="second_fragment_label">Foodie!</string>
     <string name="ex_food_name">BBQ</string>
     <string name="ex_food_price">Price: 120.000 VND</string>
     <string name="msg_save_successfully">Item is saved successfully!</string>
     <string name="msg_save_unsuccessfully">Item is inserted successfully!</string>
+    <string name="msg_delete_successfully">You have deleted successfully!</string>
+    <string name="msg_delete_confirm">Do you want to delete this item?</string>
+    <string name="menu_delete">Delete</string>
 </resources>
