--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="msg_delete_successfully">You have deleted successfully!</string>
     <string name="msg_delete_confirm">Do you want to delete this item?</string>
     <string name="menu_delete">Delete</string>
+    <string name="msg_missing">Missing field(s)!</string>
 </resources>
